[metadata]
name = iac-scan-runner
url = https://github.com/xlab-si/iac-scan-runner
project_urls =
    Source Code = https://github.com/xlab-si/iac-scan-runner
    Bug Tracker = https://github.com/xlab-si/iac-scan-runner/issues
    Documentation = https://xlab-si.github.io/iac-scanner-docs/
    Discussions = https://github.com/xlab-si/iac-scan-runner/discussions
    Releases = https://github.com/xlab-si/iac-scan-runner/releases
    Pre-releases = https://test.pypi.org/project/iac-scan-runner/#history
    Docker = https://hub.docker.com/r/xscanner/runner
    CI = https://github.com/xlab-si/iac-scan-runner/actions
author = XLAB d.o.o.
author_email = pypi@xlab.si
maintainer = xOpera team
maintainer_email = xopera@xlab.si
license_file = LICENSE
description = IaC Scan Runner CLI
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    IaC
    scan
    scanner
    inspector
    runner
    api
    cli
    quality
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
  = src
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  typer
  fastapi
  uvicorn[standard]
  python-multipart
  pydantic
  content-size-limit-asgi
  PyYAML

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  iac-scan-runner = iac_scan_runner.cli:cli
